--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
     "name": "express-typescript",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
     "scripts": {
         "build": "npx tsc",
-        "start": "node build/index.js",
-        "dev": "NODE_ENV=development nodemon src/index.ts"
+        "start": "NODE_ENV=development NODE_PATH=./build node build/index.js",
+        "dev": "NODE_ENV=development NODE_PATH=./src nodemon ./src/index.ts"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "dotenv": "^16.0.0",
-        "express": "^4.17.3"
+        "express": "^4.17.3",
+        "module-alias": "^2.2.2"
     },
     "devDependencies": {
         "@types/dotenv": "^8.2.0",
