--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
     "compilerOptions": {
         "outDir": "build",
-        "target": "es2016",
+        "target": "es6",
         "module": "commonjs",
+        "baseUrl": "src",
         "strict": true,
         "sourceMap": true,
         "esModuleInterop": true,
@@ -13,6 +14,6 @@
         "typeRoots": ["./node_modules/@types"]
     },
     "compileOnSave": true,
-    "include": ["src/**/*"],
-    "exclude": ["src/**/*.spec.ts", "node_modules", "src/__test__"]
+    "include": ["./**/*"],
+    "exclude": ["./**/*.spec.ts", "node_modules", "./__test__"]
 }
