--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "build": "npx tsc",
         "start": "NODE_ENV=development NODE_PATH=./build node build/index.js",
-        "dev": "NODE_ENV=development NODE_PATH=./src nodemon ./src/index.ts"
+        "dev": "NODE_ENV=development NODE_PATH=./src nodemon"
     },
     "keywords": [],
     "author": "",
