--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,22 @@
 {
     "compilerOptions": {
-        "outDir": "build",
-        "target": "es6",
+        "target": "es5",
         "module": "commonjs",
-        "baseUrl": "src",
-        "strict": true,
         "sourceMap": true,
+        "outDir": "./build",
+        "rootDir": "./src",
+        /* Strict Type-Checking Options */
+        "strict": true,
+        "noImplicitAny": true,
+        /* Module Resolution Options */
+        "moduleResolution": "node",
+        "baseUrl": "./src",
         "esModuleInterop": true,
-        "noImplicitAny": false,
+        /* Advanced Options */
         "skipLibCheck": true,
-        "resolveJsonModule": true,
-        "forceConsistentCasingInFileNames": true,
-        "typeRoots": ["./node_modules/@types"]
+        "forceConsistentCasingInFileNames": true
     },
-    "compileOnSave": true,
-    "include": ["./**/*"],
-    "exclude": ["./**/*.spec.ts", "node_modules", "./__test__"]
+    "lib": ["es2015"],
+    "include": ["src/**/*"],
+    "exclude": ["node_modules"]
 }
